--- a/public/scss/pages/Lookbook.module.scss
+++ b/public/scss/pages/Lookbook.module.scss
@@ -1,215 +1,73 @@
-@import "../base/colors";
-@import "./Contact.module.scss";
-@import "../components/Placeholder.module.scss";
-@import "../components/Button.module.scss";
+@import "../utils/variables";
 
 .lookbook
 {
-    $this: &;
-
-    &,
-    &_row
+    &_container
     {
-        position: relative;
+        padding: 58px 0 106px 0;
     }
 
-    &_row
+    &_breadcrumb
     {
-        margin-bottom: 8px;
+      border-top: 1px solid $color_border;
+      padding: 16px 18px 24px 18px;
     }
 
-    &_wrapper
+    &_content
     {
-        min-height: 100vh;
+      width: 100%;
     }
 
     &_item
     {
-        position: relative;
-
-        margin: 0 auto 24px;
-
-        &Image
-        {
-            border: none;
-            height: auto;
-            position: relative;
-
-            border-radius: 3px;
-            overflow: hidden;
-        }
-
-        &Detail
-        {
-            position: relative;
-
-            padding: 10px 0 0;
-
-            h1, h2, h3, h4, h5, h6, p
-            {
-                color: $color_gray_text;
-
-                font-family: "roboto-regular";
-                font-style: normal;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 18px;
-            }
-
-        }
-
-        &Button
-        {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            border: none;
-            background-color: rgba(0, 0, 0, 0);
-            z-index: 2;
-
-            color: rgba(0, 0, 0, 0) !important;
-            font-size: 0;
-            line-height: 0;
-            text-decoration: none;
-
-            cursor: pointer;
-        }
+      position: relative;
+      min-height: 375px;
+      width: 100%;
+      height: 100%;
     }
 
-    &__detail
+    &_image
     {
-        margin-bottom: 40px;
-
-        #{$this}_itemImage
-        {
-            margin: 0 auto 24px;
-            border-radius: 3px;
-            overflow: hidden;
-
-            img
-            {
-                display: block;
-                position: relative;
-                margin: 0 auto;
-                min-width: 100%;
-                max-width: 100%;
-                width: 100%;
-                height: auto;
-
-                border: none;
-            }
-        }
+      object-fit: fill;
+      width: 100%;
+      height: 375px;
     }
 
-    &_nav
+    &_itemDetail
     {
-        position: relative;
-        margin: 0 0 85px;
-
-        font-style: normal;
-        font-size: 14px;
-        line-height: 14px;
-        color: $color_gray_text;
-
-        a,
-        button
-        {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-            margin: 0;
-            padding: 0;
-            flex-wrap: nowrap;
-            text-overflow: ellipsis;
-            overflow-y: hidden;
-            white-space: nowrap;
-            word-break: keep-all;
-
-            color: inherit;
-            text-decoration: none;
-
-            height: 32px;
-            line-height: 32px;
-
-            box-shadow: 0 0 0 transparent;
-            background: transparent;
-            border: none;
-
-            &:hover,
-            &:focus,
-            &:active
-            {
-                box-shadow: 0 0 0 transparent;
-                color: $color_gray_text;
-                outline: none;
-            }
-
-            &:hover
-            {
-                text-decoration: underline;
-            }
-
-            &::before
-            {
-                content: "";
-                display: block;
-                position: relative;
-                margin: 0;
-                padding: 0;
-                width: 24px;
-                height: 100%;
-                border: none;
-                background-color: transparent;
-                background-position: left center;
-                background-size: 6px auto;
-                background-repeat: no-repeat;
-
-                background-image: url("data:image/svg+xml,%3Csvg width='6' height='10' viewBox='0 0 6 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.666687 5L5.66669 0V10L0.666687 5Z' fill='%23333333'/%3E%3C/svg%3E%0A");
-            }
-        }
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.2);
     }
 
-    &_popup
+    &_link
     {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 500px;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      opacity: 0;
     }
 
-    &_popupContent
+    &_label
     {
-        margin-bottom: 20px;
-
-        & > h3
-        {
-            font-family: "roboto-medium";
-            font-size: 16px;
-        }
-
-        & > p
-        {
-            font-size: 14px;
-            color: $color_secondary;
-            margin: 0
-        }
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      color: $color_white;
+      padding: 12px 16px;
+      @include typographyBuilder(primary,500,20,32);
     }
 
-    &_placeholder
+    &_empty
     {
-        @extend .placeholderItem;
-
-        position: relative;
-        border: none;
-        border-radius: 3px;
-        overflow: hidden;
-
-        min-height: 20vh;
+      & > div > a 
+      {
+        text-decoration: none;
+        @include typographyBuilder(secondary,500,14,24); 
+        color: $color_rose;
+      }
     }
 }
