--- a/public/scss/components/Form.module.scss
+++ b/public/scss/components/Form.module.scss
@@ -182,7 +182,7 @@
 
 .form 
 {
-  textarea
+  & > textarea
   {
     padding: 15px 24px 0 24px;
     @include typographyBuilder(secondary,400,14,24);
@@ -201,21 +201,41 @@
     }
   }
 
-  label
+  & > label
   {
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     color: $color_text_secondary;
     padding: 9px 24px 0 24px;
     @include typographyBuilder(secondary,500,10,16);
 
-    & ~ input, ~ div > input
+    & ~ input, ~ div > input, ~ select
     {
       padding: 16px 24px 0 24px;
     }
   }
 
-  input
+  & > input, > div > input
+  {
+    position: relative;
+    @include typographyBuilder(secondary,400,14,24);
+    height: 58px;
+    width: 100%;
+    border: 1px solid $color_border;
+    box-sizing: border-box;
+    border-radius: 37px;
+    color: $color_text_primary;
+    padding: 0 24px 0 24px;
+
+    &:focus
+    {
+      outline: none !important;
+      border: 1px solid $color_rose;
+      border-radius: 37px;
+    }
+  }
+
+  & > select
   {
     position: relative;
     @include typographyBuilder(secondary,400,14,24);
@@ -226,6 +246,18 @@
     border-radius: 37px;
     padding: 0 24px;
     color: $color_text_primary;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image:
+      url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTIiIGhlaWdodD0iOCIgdmlld0JveD0iMCAwIDEyIDgiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+CjxwYXRoIGQ9Ik0xMC41IDEuNzVMNiA2LjI1TDEuNSAxLjc1IiBzdHJva2U9IiM5OTgwNjAiIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlLWxpbmVjYXA9InJvdW5kIiBzdHJva2UtbGluZWpvaW49InJvdW5kIi8+Cjwvc3ZnPgo=),
+      radial-gradient($color_rose_bg2 70%, transparent 72%);
+    background-position:
+      calc(100% - 24px) calc(100% - 20px),
+      calc(100% - 12px) center;
+    background-size:
+      15px 15px,
+      40px 40px;
+    background-repeat: no-repeat;
 
     &:focus
     {
@@ -233,5 +265,10 @@
       border: 1px solid $color_rose;
       border-radius: 37px;
     }
+  }
+
+  & > span > [class*='react-date-picker']
+  {
+    
   }
 }
